--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		    </div>
 		    <div class="community_text">
 		        <p>
-		            Connect to our Discord server, where you can communicate with us. There we tell our stories, jokes, memes etc😁
+		            Connect to our DISCORD server, where you can communicate with us. There we tell our stories, jokes, memes etc😁
 		        </p>
 		    </div>
 		</div>
