--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		    </div>
 		    <div class="community_text">
 		        <p>
-		            Connect to our DISCORD server, where you can communicate with us. There we tell our stories, jokes, memes etc😁
+		            Connect to our Discord server, where you can communicate with us. There we tell our stories, jokes, memes etc😁
 		        </p>
 		    </div>
 		</div>
@@ -246,7 +246,7 @@
 		<div class="stickers">
 		    <div class="stickers_text">
 		        <p>Get telegram stickers</p></div>
-		     <div class="click">
+		     <div class="CLICK">
 		         <p>Click</p></div>  
             <div class="tg_stickers">
             <img class="arrow" src="assets/images/arrow.png" alt="">
