--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 		<div class="stickers">
 		    <div class="stickers_text">
 		        <p>Get telegram stickers</p></div>
-		     <div class="CLICK">
-		         <p>Click</p></div>  
+		     <div class="click">
+		         <p>CLICK</p></div>  
             <div class="tg_stickers">
             <img class="arrow" src="assets/images/arrow.png" alt="">
 		    <a href="https://t.me/addstickers/sm22_627d3d4d1d6a48d09239cf1554a11813_by_Stickery6bot" target="_blank"><img class="stickers_pic" src="assets/images/stickers.jpg" alt=""></a>
