--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 
 <!-- FOOTER -->
 
+<div class="main"> FOOTER DESIGN IN HTML CSS</div>
 <footer class="footer-distributed">
  
  <div class="footer-left">
