--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="intro">
 	<div class="container">
 		<div class="intro_inner">
-			<h2 class="intro_suptitle">Welcum to Cum Zone</h2>
+			<h2 class="intro_suptitle"></h2>
 			<h1 class="intro_title"></h1>
 			<a class="btn" href="#">Read More</a>
 		</div>
