--- a/index.html
+++ b/index.html
@@ -253,7 +253,11 @@
 		    <a href="https://t.me/addstickers/sm22_627d3d4d1d6a48d09239cf1554a11813_by_Stickery6bot" target="_blank"><img class="stickers_pic" src="assets/images/stickers.jpg" alt=""></a>
 		    </div>
 		</div>
-    </div>
+
+            <h2 class="section_title">Listen our music</h2>
+            <div class="Spotify">
+            <iframe src="https://open.spotify.com/embed/playlist/0Z5ettwrGn4vzeAyo0UUEb" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
 </section>
 
 <!-- FOOTER -->
