--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
 		    </div>
 		</div>
 
-            <h2 class="section_title">Listen our music</h2>
+            <div class="section_header">
+			<h2 class="section_title">Listen our music</h2>
+		</div>
             <div class="Spotify">
             <iframe src="https://open.spotify.com/embed/playlist/0Z5ettwrGn4vzeAyo0UUEb" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
